fixed url overflow

--- a/src/components/main.scss
+++ b/src/components/main.scss
@@ -31,6 +31,7 @@
         text-align: left;
         justify-content: center;
         padding: 1rem;
+        word-break: break-word;
         p {
             margin: 0px;
             margin-bottom: 5px;
@@ -122,4 +123,8 @@
     }
 
 
+}
+
+.active {
+    color: yellow;
 }
